# WebServer_My

./: .gitignore  CMakeLists.txt  README.md  build.sh  json_exp.txt  main.cpp  server  test.txt  数据库.sql  数据库.txt
include/backup_for_include/: filehandle_old.h  threadpool_oldl.h
include/connection/: connection.h  connection.hpp
include/epollmanager/: epollmanager.h
include/filehandle/: downloader.h  downloader.hpp  filehandle.h  staticfilehandle.h  uploader.h  uploader.hpp
include/http/: httprequest.cpp  httprequest.h  httprequest.hpp  httpresponse.h  httpresponse.hpp  router.h  router.hpp
include/locker/: locker.h
include/log/: log.h  logqueue.h
include/server/: authhandler.h  authhandler.hpp  filehandle.h  filehandle.hpp  filehandle_new.h  server.cpp  server.h  server.hpp  tokenmanager.h  tokenmanager.hpp
include/sql/: filedao.h  filedao.hpp  sqlconnpool.h  userdao.h  userdao.hpp
include/threadpool/: threadpool.h  threadpool.hpp
include/timer/: timer.h
pubilc/: dashboard.html  login.html
public/: Main.html  Main2.html  dashboard.html  dashboard1.html  login.html  register.html
src/: backup_main.cpp  httprequest.cpp  main.cpp
